hey look, it dumps out datters now

--- a/templates/main.html
+++ b/templates/main.html
@@ -15,17 +15,19 @@
 <body>
 
 	<header>
-		<!-- <h1>define(@everyword)</h1> -->
+		<h1>Async FeExampletch</h1>
 	</header><!-- end header -->
 
 	<div id="main">
 		<div id="container">
-
+			<pre>
+{{ pp_body }}
+			</pre>
 		</div><!-- end container -->
 	</div><!-- end main -->
 
 	<footer>
-
+		</p>A fancy Tornado example project by <a href="http://twitter.com/mike_dory">@mike_dory</a>.</p>
 	</footer><!-- end footer -->
 
 	<!-- Load jQuery -->
@@ -39,20 +41,6 @@
 
 	<!-- main script -->
 	<script src="{{ static_url("js/script.js") }}"></script>
-
-	{% if (google_analytics_id != False) %}
-	<!-- analytic party -->
-	<script type="text/javascript">
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', '{{ google_analytics_id }}']);
-	  _gaq.push(['_trackPageview']);
-	  (function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-	</script>
-	{% end %}
 
 	</body>
 </html>
